# Renderer

./: .gitignore  ANGENT.md  CMakeLists.txt  LICENSE
.learnings/: ERRORS.md  LEARNINGS.md
DebugDoc/: 0.0.1-问题.md  0.0.4-问题.md  0.0.8-问题.md
ReviewDoc/: 0.0.11-评审遗留项.md  0.0.12-评审遗留项.md  0.0.13-评审遗留项.md  0.0.5-评审遗留项.md  0.0.8-评审遗留项.md  0.0.9-评审遗留项.md
TalkDoc/: 2026-03-11-FocusAll与Bounds策略-讨论.md  2026-03-11-OrbitCenter与相机朝向-讨论.md  2026-03-12-0.0.9评审优先级与相机结构讨论.md  2026-03-12-FocusAll可见性与FocusSphere裁剪-讨论.md  2026-03-12-Perspective+Lens行为边界-讨论.md  2026-03-12-UI层代码结构是否继续拆解-讨论.md  2026-03-12-ZoomMode完整UI策略-讨论.md  2026-03-12-控制面板滚动与窗口高度策略-讨论.md  2026-03-12-正交模式真实投影路径接入-讨论.md  2026-03-12-正交模式缩放聚焦与LensZoom-讨论.md  2026-03-12-正交相机距离职责-讨论.md  2026-03-12-相机缩放策略与裁剪-讨论.md  2026-03-12-缩放模式与裁剪接口设计-讨论.md  2026-03-12-视口缩放与参数调整边界-讨论.md  2026-04-02-0.0.18最小建模算子栈范围-讨论.md  2026-04-02-ViewportZoom采用Blender式工作窗口缩放-讨论.md  2026-04-02-参数化建模路线参考Blender与Maya-讨论.md  2026-04-03-参数化建模与选中系统分期方案-讨论.md  2026-04-03-参数化建模单元分类与选中编辑方案-讨论.md  2026-04-03-测试界面分组与分类重构-讨论.md
VersionDoc/: 0.0.1-开发计划.md  0.0.1-开发记录.md  0.0.10-开发计划.md  0.0.10-开发记录.md  0.0.11-开发计划.md  0.0.11-开发记录.md  0.0.12-开发计划.md  0.0.12-开发记录.md  0.0.13-开发计划.md  0.0.13-开发记录.md  0.0.14-开发计划.md  0.0.14-开发记录.md  0.0.15-开发计划.md  0.0.15-开发记录.md  0.0.16-开发计划.md  0.0.16-开发记录.md  0.0.17-开发计划.md  0.0.17-开发记录.md  0.0.18-开发计划.md  0.0.18-开发记录.md  0.0.19-开发计划.md  0.0.19-开发记录.md  0.0.2-开发计划.md  0.0.2-开发记录.md  0.0.20-开发计划.md  0.0.20-开发记录.md  0.0.21-开发计划.md  0.0.21-开发记录.md  0.0.23-开发计划.md  0.0.24-开发计划.md  0.0.24-开发记录.md  0.0.3-开发计划.md  0.0.3-开发记录.md  0.0.4-开发计划.md  0.0.4-开发记录.md  0.0.5-开发计划.md  0.0.5-开发记录.md  0.0.6-开发计划.md  0.0.6-开发记录.md  0.0.7-开发计划.md  (+5 more)
doc/: 00-文档索引.md  01-项目总览与架构设计.md  02-模块功能说明.md  03-渲染与运行流程.md  04-代码阅读指南.md  05-旋转中心扩展开发评审.md
src/parametric_model/: CMakeLists.txt
src/parametric_model/include/renderer/parametric_model/: construction_schema.h  evaluation_result.h  model_structure.h  parametric_evaluator.h  primitive_factory.h  types.h
src/parametric_model/src/: construction_schema.cpp  model_structure.cpp  parametric_evaluator.cpp  primitive_factory.cpp
src/render_core/: CMakeLists.txt
src/render_core/include/renderer/render_core/: frame_assembler.h  scene_repository.h
src/render_core/src/: frame_assembler.cpp  scene_repository.cpp
src/render_gl/: CMakeLists.txt
src/render_gl/include/renderer/render_gl/: gl_renderer.h
src/render_gl/src/: gl_functions.h  gl_renderer.cpp  shader_library.cpp  shader_library.h
src/scene_contract/: CMakeLists.txt
src/scene_contract/include/renderer/scene_contract/: math_utils.h  types.h
src/test_viewer/: CMakeLists.txt
src/test_viewer/src/: camera.cpp  camera.h  camera_clip_utils.cpp  camera_clip_utils.h  camera_control_widget.cpp  camera_control_widget.h  camera_focus_bounds_utils.cpp  camera_focus_bounds_utils.h  camera_focus_utils.cpp  camera_focus_utils.h  camera_mode_ui_policy.cpp  camera_mode_ui_policy.h  lighting_control_widget.cpp  lighting_control_widget.h  main.cpp  model_change_view_state.cpp  model_change_view_state.h  orbit_camera_controller.cpp  orbit_camera_controller.h  parametric_model_add_adapter.cpp  parametric_model_add_adapter.h  parametric_ui_schema_adapter.cpp  parametric_ui_schema_adapter.h  scene_object_control_widget.cpp  scene_object_control_widget.h  viewer_control_panel.cpp  viewer_control_panel.h  viewer_ui_state_adapter.cpp  viewer_ui_state_adapter.h  viewer_ui_types.h  viewer_window.cpp  viewer_window.h  viewport_zoom_state.cpp  viewport_zoom_state.h
src/test_viewer/tests/: parametric_model_add_adapter_smoke_tests.cpp  parametric_ui_schema_adapter_smoke_tests.cpp  viewer_ui_state_adapter_smoke_tests.cpp
